Output Rust version after dev container build
This also has the side effect of not opening a bash shell after the
build when I'm wanting zsh instead.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -14,7 +14,7 @@
 	// "forwardPorts": [],
 
 	// Use 'postCreateCommand' to run commands after the container is created.
-	// "postCreateCommand": ["rustc", "--version"],
+	"postCreateCommand": ["rustc", "--version"],
 
 	// Configure tool-specific properties.
 	"customizations": {
